# litepilot-tui

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOP.md  IDEA.md  PLAN.md  README.md  TEST.md  package.json
.github/workflows/: ci.yml  release.yml
notes/: challenges-and-ideas-to-small-model-coding-agents.md  deepseek-tui-agent-design.md  guide-to-ollama-kv-cache-and-context-management.md
src/: app.rs  approval.rs  config.rs  context.rs  hooks.rs  logger.rs  lsp.rs  main.rs  prompt.rs  recap.rs  router.rs  snapshot.rs  wizard.rs  working_set.rs
src/agent/: agent_loop.rs  auto_run.rs  diagnostics.rs  editor.rs  mod.rs  planner.rs  prompts.rs  retry.rs  summarizer.rs  syntax.rs  tools_parser.rs
src/codebase/: builtin.rs  index.rs  mod.rs  retrieval.rs
src/codebase/templates/c/: basic_program.c
src/codebase/templates/config/: cargo_toml.toml  env_example.env  github_actions_ci.yml  gitignore
src/codebase/templates/cpp/: basic_program.cpp  class_template.hpp
src/codebase/templates/css/: dark_theme.css  reset.css  responsive_grid.css
src/codebase/templates/docker/: Dockerfile  Dockerfile_node  (+2 more)
src/ollama/: chat.rs  mod.rs  model.rs
src/project/: file_ops.rs  mod.rs  uv.rs
src/sandbox/: executor.rs  landlock.rs  mod.rs  seatbelt.rs
src/search/: cache.rs  mod.rs
src/session/: mod.rs  persistence.rs
src/skills/: builtin.rs  mod.rs  parser.rs
src/skills_builtin/: explain.md  review.md  search.md  simplify.md  test.md
src/tools/: file_ops.rs  mod.rs  search.rs  shell.rs
src/ui/: inline.rs  mod.rs  theme.rs
src/util/: diff.rs  mod.rs  text.rs
(+38 files in other folders)
