[package]
name = "litepilot-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal AI coding assistant powered by Ollama-host local models"
license = "MIT"

[[bin]]
name = "litepilot"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Filesystem
walkdir = "2"

# Diff
similar = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Directories
dirs = "6"
shellexpand = "3"

# Async streams
async-stream = "0.3"

# Regex
regex = "1"

# Syntax highlighting
syntect = "5"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
insta = "1"
proptest = "1"

[profile.release]
lto = true
strip = true
opt-level = 3
